--- a/gulimall-coupon/src/main/resources/application.properties
+++ b/gulimall-coupon/src/main/resources/application.properties
@@ -1,10 +1,14 @@
-spring.datasource.driver-class-name=com.mysql.cj.jdbc.Driver
-spring.datasource.url=jdbc:mysql://123.57.180.71:3306/gulimall_sms?useUnicode=true&characterEncoding=UTF-8&useSSL=false&allowPublicKeyRetrieval=true&serverTimezone=Asia/Shanghai
-spring.datasource.username=root
-spring.datasource.password=12345678
-
-mybatis-plus.mapper-locations=classpath:/mapper/**/*.xml
-#配了@TableId注解的执行自增主键
-mybatis-plus.global-config.db-config.id-type=auto
-
-server.port=7000
+#spring.application.name=gulimall-coupon
+#server.port=7000
+##mysql
+#spring.datasource.driver-class-name=com.mysql.cj.jdbc.Driver
+#spring.datasource.url=jdbc:mysql://123.57.180.71:3306/gulimall_sms?useUnicode=true&characterEncoding=UTF-8&useSSL=false&allowPublicKeyRetrieval=true&serverTimezone=Asia/Shanghai
+#spring.datasource.username=root
+#spring.datasource.password=12345678
+##nacos
+#spring.cloud.nacos.config.server-addr=127.0.0.1:8848
+#
+##mybatis-plus
+#mybatis-plus.mapper-locations=classpath:/mapper/**/*.xml
+##配了@TableId注解的执行自增主键
+#mybatis-plus.global-config.db-config.id-type=auto
