--- a/gulimall-gateway/pom.xml
+++ b/gulimall-gateway/pom.xml
@@ -8,28 +8,29 @@
 		<version>2.1.8.RELEASE</version>
 		<relativePath/> <!-- lookup parent from repository -->
 	</parent>
-	<groupId>com.renyujhie.gulimall</groupId>
-	<artifactId>gulimall-member</artifactId>
+
+	<groupId>com.renyujie.gulimall</groupId>
+	<artifactId>gulimall-gateway</artifactId>
 	<version>0.0.1-SNAPSHOT</version>
-	<name>gulimall-member</name>
-	<description>会员服务</description>
+	<name>gulimall-gateway</name>
+	<description>API网关</description>
+
+
 	<properties>
 		<java.version>1.8</java.version>
 		<spring-cloud.version>Greenwich.SR3</spring-cloud.version>
 	</properties>
 	<dependencies>
+
 		<dependency>
 			<groupId>com.renyujie.gulimall</groupId>
 			<artifactId>gulimall-common</artifactId>
 			<version>0.0.1-SNAPSHOT</version>
 		</dependency>
-		<dependency>
-			<groupId>org.springframework.boot</groupId>
-			<artifactId>spring-boot-starter-web</artifactId>
-		</dependency>
+
 		<dependency>
 			<groupId>org.springframework.cloud</groupId>
-			<artifactId>spring-cloud-starter-openfeign</artifactId>
+			<artifactId>spring-cloud-starter-gateway</artifactId>
 		</dependency>
 
 		<dependency>
