--- a/gulimall-member/src/main/resources/application.properties
+++ b/gulimall-member/src/main/resources/application.properties
@@ -1,10 +1,13 @@
-spring.datasource.driver-class-name=com.mysql.cj.jdbc.Driver
-spring.datasource.url=jdbc:mysql://123.57.180.71:3306/gulimall_ums?useUnicode=true&characterEncoding=UTF-8&useSSL=false&allowPublicKeyRetrieval=true&serverTimezone=Asia/Shanghai
-spring.datasource.username=root
-spring.datasource.password=12345678
+#spring.datasource.driver-class-name=com.mysql.cj.jdbc.Driver
+#spring.datasource.url=jdbc:mysql://123.57.180.71:3306/gulimall_ums?useUnicode=true&characterEncoding=UTF-8&useSSL=false&allowPublicKeyRetrieval=true&serverTimezone=Asia/Shanghai
+#spring.datasource.username=root
+#spring.datasource.password=12345678
+#
+#mybatis-plus.mapper-locations=classpath:/mapper/**/*.xml
+##配了@TableId注解的执行自增主键
+#mybatis-plus.global-config.db-config.id-type=auto
+#
+#server.port=8000
 
-mybatis-plus.mapper-locations=classpath:/mapper/**/*.xml
-#配了@TableId注解的执行自增主键
-mybatis-plus.global-config.db-config.id-type=auto
-
-server.port=8000
+#memberNacosConfigTest.user.name=zhansan
+#memberNacosConfigTest.user.age=22
