--- a/pom.xml
+++ b/pom.xml
@@ -15,7 +15,7 @@
 		<module>gulimall-member</module>
 		<module>gulimall-order</module>
 		<module>gulimall-product</module>
-<!--		<module>gulimall-third-party</module>-->
+		<module>gulimall-third-party</module>
 		<module>gulimall-ware</module>
 		<module>renren-fast</module>
 <!--		<module>gulimall-search</module>-->
