--- a/gulimall-product/src/main/resources/application.properties
+++ b/gulimall-product/src/main/resources/application.properties
@@ -10,6 +10,6 @@
 #server.port=10000
 #spring.cloud.nacos.discovery.server-addr=127.0.0.1:8848
 
-#spring.cloud.alicloud.access-key=LTAI5t8tQGAjN4MpNrfv2k2Q
-#spring.cloud.alicloud.secret-key=66p27jI71YB6KmZG3b48jALPh0o6Dy
+#spring.cloud.alicloud.access-key=
+#spring.cloud.alicloud.secret-key=
 #spring.cloud.alicloud.oss.endpoint=oss-cn-beijing.aliyuncs.com
