--- a/gulimall-ware/src/main/resources/application.properties
+++ b/gulimall-ware/src/main/resources/application.properties
@@ -1,10 +1,15 @@
-spring.datasource.driver-class-name=com.mysql.cj.jdbc.Driver
-spring.datasource.url=jdbc:mysql://123.57.180.71:3306/gulimall_wms?useUnicode=true&characterEncoding=UTF-8&useSSL=false&allowPublicKeyRetrieval=true&serverTimezone=Asia/Shanghai
-spring.datasource.username=root
-spring.datasource.password=12345678
-
-mybatis-plus.mapper-locations=classpath:/mapper/**/*.xml
-#配了@TableId注解的执行自增主键
-mybatis-plus.global-config.db-config.id-type=auto
-
-server.port=11000
+#spring.datasource.driver-class-name=com.mysql.cj.jdbc.Driver
+#spring.datasource.url=jdbc:mysql://123.57.180.71:3306/gulimall_wms?useUnicode=true&characterEncoding=UTF-8&useSSL=false&allowPublicKeyRetrieval=true&serverTimezone=Asia/Shanghai
+#spring.datasource.username=root
+#spring.datasource.password=12345678
+#
+#mybatis-plus.mapper-locations=classpath:/mapper/**/*.xml
+##配了@TableId注解的执行自增主键
+#mybatis-plus.global-config.db-config.id-type=auto
+#
+#server.port=11000
+#
+#spring.application.name=gulimall-ware
+#
+#spring.cloud.nacos.discovery.server-addr=127.0.0.1:8848
+#logging.level.com.renyujie.gulimall.ware=debug
