--- a/pom.xml
+++ b/pom.xml
@@ -18,7 +18,7 @@
 		<module>gulimall-third-party</module>
 		<module>gulimall-ware</module>
 		<module>renren-fast</module>
-<!--		<module>gulimall-search</module>-->
+		<module>gulimall-search</module>
 		<module>renren-generator</module>
 		<module>gulimall-common</module>
 		<!--		<module>gulimall-auth-server</module>-->
