--- a/gulimall-product/src/main/resources/application.properties
+++ b/gulimall-product/src/main/resources/application.properties
@@ -1,3 +1,6 @@
+
+#以下所有的配置都转移到nacos中   这里全部注释只是为了备用和查看方便
+
 #spring.datasource.driver-class-name=com.mysql.cj.jdbc.Driver
 #spring.datasource.url=jdbc:mysql://123.57.180.71:3306/gulimall_pms?useUnicode=true&characterEncoding=UTF-8&useSSL=false&allowPublicKeyRetrieval=true&serverTimezone=Asia/Shanghai
 #spring.datasource.username=root
@@ -24,3 +27,29 @@
 #spring.jackson.date-format=yyyy-MM-dd HH:mm:ss
 ##关闭缓存可以实时看效果
 #spring.thymeleaf.cache=false
+
+#redis
+#spring.redis.host=123.57.180.71
+#spring.redis.port=6379
+#spring.redis.password=ryj123456
+#超时时间大一点 否则会  java.io.IOException: Connection reset by peer 远程主机强迫关闭了一个现有的连接
+#具体见：https://blog.csdn.net/wozniakzhang/article/details/98766926    https://www.freesion.com/article/8688761517
+#spring.redis.lettuce.shutdown-timeout=500
+
+
+#以下是整合Spring Cache 的相关配置
+#配置缓存的类型 (最简化的配置就是配置cache.type)
+#spring.cache.type=redis
+#指定缓存的存活时间 单位：ms  1h
+#spring.cache.redis.time-to-live=3600000
+
+#为了区分redis其他的东西
+#如果指定了前缀，就用我们指定的前缀，如果没有就默认使用缓存的名字(即使用注解的时候@Cacheable(value = {"XXX"}中的XXX)作为前缀
+#优先级高
+#spring.cache.redis.key-prefix=CACHE_
+#默认是使用前缀的
+#spring.cache.redis.use-key-prefix=true
+#
+##是否缓存空值 防止缓存穿透
+#spring.cache.redis.cache-null-values=true
+
