--- a/gulimall-product/src/main/resources/bootstrap.properties
+++ b/gulimall-product/src/main/resources/bootstrap.properties
@@ -15,8 +15,8 @@ spring.cloud.nacos.config.ext-config[2].data-id=datasource.properties
 spring.cloud.nacos.config.ext-config[2].group=dev
 spring.cloud.nacos.config.ext-config[2].refresh=true
 
-#spring.cloud.nacos.config.ext-config[3].data-id=redis.properties
-#spring.cloud.nacos.config.ext-config[3].group=dev
-#spring.cloud.nacos.config.ext-config[3].refresh=true
+spring.cloud.nacos.config.ext-config[3].data-id=redis.properties
+spring.cloud.nacos.config.ext-config[3].group=dev
+spring.cloud.nacos.config.ext-config[3].refresh=true
 
 
