认证-社交登录+session

--- a/gulimall-auth-server/src/main/resources/application.properties
+++ b/gulimall-auth-server/src/main/resources/application.properties
@@ -11,6 +11,9 @@
 #logging.level.com.renyujie.gulimall.auth=debug
 #Spring Boot无法访问css，js，图片等静态资源 https://www.cxybb.com/article/qq_35824577/105069317
 #spring.mvc.static-path-pattern=/static/**
+##feign  OpenFeign默认支持ribbon 但Feign配置会优先于Ribbon配置  配置完之后也是同样的效果。
+#feign.client.config.default.connect-timeout=5000
+#feign.client.config.default.read-timeout=30000
 
 
 ##redis
@@ -33,3 +36,7 @@
 #
 ##是否缓存空值 防止缓存穿透
 #spring.cache.redis.cache-null-values=true
+
+##解决session共享  配置springSession
+#spring.session.store-type=redis
+#server.servlet.session.timeout=30m
