--- a/gulimall-product/src/main/resources/application.properties
+++ b/gulimall-product/src/main/resources/application.properties
@@ -61,3 +61,7 @@
 ##自定义线程池的存活时间 s
 #gulimall.thread.keep-alive-time=10
 
+##解决session共享  配置springSession
+#spring.session.store-type=redis
+#server.servlet.session.timeout=30m
+
