--- a/gulimall-search/src/main/resources/application.properties
+++ b/gulimall-search/src/main/resources/application.properties
@@ -3,4 +3,14 @@
 #server.port=12000
 #logging.level.com.renyujie.gulimall.search=debug
 #Spring Boot无法访问css，js，图片等静态资源 https://www.cxybb.com/article/qq_35824577/105069317
-spring.mvc.static-path-pattern=/static/**
+#spring.mvc.static-path-pattern=/static/**
+#
+##redis
+#spring.redis.host=123.57.180.71
+#spring.redis.port=6379
+#spring.redis.password=ryj123456
+#spring.redis.lettuce.shutdown-timeout=500
+#
+##解决session共享  配置springSession
+#spring.session.store-type=redis
+#server.servlet.session.timeout=30m
