--- a/gulimall-search/src/main/resources/bootstrap.properties
+++ b/gulimall-search/src/main/resources/bootstrap.properties
@@ -8,6 +8,6 @@ spring.cloud.nacos.config.ext-config[0].data-id=other.properties
 spring.cloud.nacos.config.ext-config[0].group=dev
 spring.cloud.nacos.config.ext-config[0].refresh=true
 
-#spring.cloud.nacos.config.ext-config[1].data-id=search.properties
-#spring.cloud.nacos.config.ext-config[1].group=dev
-#spring.cloud.nacos.config.ext-config[1].refresh=true
+spring.cloud.nacos.config.ext-config[1].data-id=redis.properties
+spring.cloud.nacos.config.ext-config[1].group=dev
+spring.cloud.nacos.config.ext-config[1].refresh=true
