--- a/gulimall-order/pom.xml
+++ b/gulimall-order/pom.xml
@@ -43,6 +43,19 @@
 			<version>RELEASE</version>
 			<scope>test</scope>
 		</dependency>
+
+		<!--        引入RabbitMQ消息队列-->
+		<dependency>
+			<groupId>org.springframework.boot</groupId>
+			<artifactId>spring-boot-starter-amqp</artifactId>
+		</dependency>
+
+		<!--        引入模版引擎 thymeleaf -->
+		<dependency>
+			<groupId>org.springframework.boot</groupId>
+			<artifactId>spring-boot-starter-thymeleaf</artifactId>
+		</dependency>
+
 	</dependencies>
 	<dependencyManagement>
 		<dependencies>
