--- a/gulimall-order/src/main/resources/application.properties
+++ b/gulimall-order/src/main/resources/application.properties
@@ -6,5 +6,25 @@ spring.datasource.password=12345678
 mybatis-plus.mapper-locations=classpath:/mapper/**/*.xml
 #配了@TableId注解的执行自增主键
 mybatis-plus.global-config.db-config.id-type=auto
+spring.cloud.nacos.discovery.server-addr=127.0.0.1:8848
+#日期格式化
+spring.jackson.date-format=yyyy-MM-dd HH:mm:ss
+#关闭thymeleaf缓存 开发期间就能看到实时效果；上线以后就要打开缓存了(效果不大)
+spring.thymeleaf.cache=false
 
 server.port=9000
+spring.application.name=gulimall-order
+logging.level.com.renyujie.gulimall.order=debug
+
+#配置rabbitmq
+spring.rabbitmq.host=123.57.180.71
+spring.rabbitmq.port=5672
+spring.rabbitmq.virtual-host=/
+#开启发送端确认 发送的过程中
+spring.rabbitmq.publisher-confirms=true
+##开启发送端确认 抵达队列
+spring.rabbitmq.publisher-returns=true
+#抵达队列，以异步模式优先回调组合ReturnCallback
+spring.rabbitmq.template.mandatory=true
+#手动ack消息 手动确认收货 手动确认模式 防止消息丢失
+spring.rabbitmq.listener.simple.acknowledge-mode=manual
