订单服务：解锁库存+最终一致性

--- a/gulimall-ware/src/main/resources/application.properties
+++ b/gulimall-ware/src/main/resources/application.properties
@@ -13,3 +13,16 @@
 #
 #spring.cloud.nacos.discovery.server-addr=127.0.0.1:8848
 #logging.level.com.renyujie.gulimall.ware=debug
+
+#配置rabbitmq
+#spring.rabbitmq.host=123.57.180.71
+#spring.rabbitmq.port=5672
+#spring.rabbitmq.virtual-host=/
+##开启发送端确认 发送的过程中
+#spring.rabbitmq.publisher-confirms=true
+###开启发送端确认 抵达队列
+#spring.rabbitmq.publisher-returns=true
+##抵达队列，以异步模式优先回调组合ReturnCallback
+#spring.rabbitmq.template.mandatory=true
+##手动ack消息 手动确认收货 手动确认模式 防止消息丢失
+#spring.rabbitmq.listener.simple.acknowledge-mode=manual
