--- a/gulimall-ware/pom.xml
+++ b/gulimall-ware/pom.xml
@@ -43,6 +43,12 @@
 			<version>RELEASE</version>
 			<scope>test</scope>
 		</dependency>
+		<!--        引入RabbitMQ消息队列-->
+		<dependency>
+			<groupId>org.springframework.boot</groupId>
+			<artifactId>spring-boot-starter-amqp</artifactId>
+		</dependency>
+
 
 	</dependencies>
 	<dependencyManagement>
