订单服务：支付 测试到订单列表页渲染 异步跳转+保存交易流水由于没有穿透没实现 AlipayTempla.notify_url 所以所有订单无法是"已付款"

--- a/gulimall-order/pom.xml
+++ b/gulimall-order/pom.xml
@@ -67,6 +67,13 @@
 			<artifactId>spring-session-data-redis</artifactId>
 		</dependency>
 
+		<!--        导入支付宝的SDK-->
+		<dependency>
+			<groupId>com.alipay.sdk</groupId>
+			<artifactId>alipay-sdk-java</artifactId>
+			<version>4.9.28.ALL</version>
+		</dependency>
+
 	</dependencies>
 	<dependencyManagement>
 		<dependencies>
