--- a/gulimall-gateway/src/main/resources/application.yaml
+++ b/gulimall-gateway/src/main/resources/application.yaml
@@ -79,3 +79,9 @@
 #            uri: lb://gulimall-order
 #            predicates:
 #              - Host=order.gulimall.com
+#
+#        #订单付款转会员
+#        - id: gulimall_member_route
+#            uri: lb://gulimall-member
+#            predicates:
+#              - Host=member.gulimall.com
