--- a/gulimall-member/src/main/resources/application.properties
+++ b/gulimall-member/src/main/resources/application.properties
@@ -11,3 +11,26 @@
 
 #memberNacosConfigTest.user.name=zhansan
 #memberNacosConfigTest.user.age=22
+
+spring.thymeleaf.cache=false
+#日期格式化
+spring.jackson.date-format=yyyy-MM-dd HH:mm:ss
+#Spring Boot无法访问css，js，图片等静态资源 https://www.cxybb.com/article/qq_35824577/105069317
+spring.mvc.static-path-pattern=/static/**
+spring.thymeleaf.prefix=classpath:/templates/
+spring.thymeleaf.suffix=.html
+#feign  OpenFeign默认支持ribbon 但Feign配置会优先于Ribbon配置  配置完之后也是同样的效果。
+feign.client.config.default.connect-timeout=5000
+feign.client.config.default.read-timeout=30000
+logging.level.com.renyujie.gulimall.member=debug
+
+#redis
+spring.redis.host=123.57.180.71
+spring.redis.port=6379
+spring.redis.password=ryj123456
+#超时时间大一点 否则会  java.io.IOException: Connection reset by peer 远程主机强迫关闭了一个现有的连接
+#具体见：https://blog.csdn.net/wozniakzhang/article/details/98766926    https://www.freesion.com/article/8688761517
+spring.redis.lettuce.shutdown-timeout=500
+#springSession
+spring.session.store-type=redis
+
