sentinel和Zipkin（以看为主）

--- a/gulimall-seckill/src/main/resources/application.properties
+++ b/gulimall-seckill/src/main/resources/application.properties
@@ -36,3 +36,10 @@ spring.rabbitmq.virtual-host=/
 #spring.rabbitmq.template.mandatory=true
 ##手动ack消息 手动确认收货 手动确认模式 防止消息丢失
 #spring.rabbitmq.listener.simple.acknowledge-mode=manual
+
+##配置sentinel
+#spring.cloud.sentinel.transport.dashboard=localhost:8333
+#spring.cloud.sentinel.transport.port=8719
+#
+##actuator：暴露所有端点给sentinel监控产生图表
+#management.endpoints.web.exposure.include=*
