--- a/gulimall-common/pom.xml
+++ b/gulimall-common/pom.xml
@@ -118,6 +118,13 @@
         </dependency>
         <!--  引入HttpUtils 结束 -->
 
+
+<!--        引入Sentinel-->
+<!--        <dependency>-->
+<!--            <groupId>com.alibaba.cloud</groupId>-->
+<!--            <artifactId>spring-cloud-starter-alibaba-sentinel</artifactId>-->
+<!--        </dependency>-->
+
     </dependencies>
 
 
